--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<html>
+<head>
+<!-- Bootstrap -->
+<link href="style.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<!-- jQuery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
+<script src="script.js"></script>
+
+</head>
+<body>
 <div class="container">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
@@ -29,3 +43,6 @@
     </div>
   </div>
 </div>
+</body>
+</html>
+
